Add basic multi-release module-info